--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ page.title }} | {{ site.title }}</title>
-  <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
-</head>
-<body>
-  <nav class="sidebar">
-    <ul>
-      {% for item in site.data.nav %}
-      <li><a href="{{ item.link }}">{{ item.name }}</a></li>
-      {% endfor %}
-    </ul>
-  </nav>
-  <main>
-    {{ content }}
-  </main>
-</body>
-</html>
+---
+layout: default
+---
+{% include sidebar.html %}
+{{ content }}
