--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,14 +2,33 @@
   border: 2px solid #00ff00;
   border-radius: 10px;
   padding: 15px;
+  align-items: flex-start;
   margin-bottom: 15px;
+  margin-right: 40px;
   background-color: rgba(0,0,0,0.3);
   box-shadow: 0 4px 6px rgba(0,0,0,0.25);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+.h2{
+  margin-right:40px;
 }
 
 .post-feed .post-item:hover {
   transform: translateY(-8px);
   box-shadow: 0 6px 12px rgba(0,0,0,0.35);
 }
+.post-thumb {
+  display: flex;
+  align-items: center; /* Centra verticalmente */
+  justify-content: space-between; /* Texto a la izquierda, imagen a la derecha */
+  gap: 20px; /* Espacio entre texto e imagen */
+}
 
+.post-thumb img {
+  width: 80px;
+  height: auto;
+}
+
+.post-thumb .post-text {
+  flex: 1; /* El texto ocupa el espacio restante */
+}
